# doover-cli

./: .gitignore  AGENT.md  Dockerfile  README.md  pyproject.toml  user_stores.md
.github/workflows/: release.yml
debian/: changelog  control  install  rules
docs/: processor_testing.md
patches/: pydoover-group-children-optional.patch
src/: doover_CHANGEME.py
src/doover_cli/: __init__.py  agent.py  apps.py  channel.py  colours.py  config.py  config_schema.py  dda_logs.py  device_type.py  doover_config.py  login.py  processor_test.py  report.py  simulators.py  tunnel.py  ui_schema.py  user.py
src/doover_cli/api/: __init__.py  auth.py  errors.py  session.py
src/doover_cli/apps/: app_install.py  apps.py  device.py  device_type.py  tunnel.py
src/doover_cli/renderer/: __init__.py  _base.py  _basic.py  _default.py  _json.py
src/doover_cli/utils/: __init__.py  api.py  apps.py  channel_views.py  context.py  crud.py  errors.py  formatters.py  parsers.py  prompt.py  sentry.py  shell_commands.py  state.py
src/doover_cli/utils/crud/: __init__.py  commands.py  create.py  lookup.py  prompting.py  schema.py  values.py
tests/: conftest.py  test_agent.py  test_app_install.py  test_apps.py  test_auth_integration.py  test_auth_unit.py  test_channel_cli.py  test_channel_views.py  test_crud_commands.py  test_crud_lookup.py  test_crud_prompting.py  test_crud_schema.py  test_crud_values.py  test_default_renderer.py  test_device.py  test_device_cli_integration.py  test_device_type.py  test_device_type_cli_integration.py  test_processor_testing.py  test_prompt.py  test_sentry.py  test_user.py  test_utils_apps.py
