[project]
name = "doover-cli"
version = "0.1.0"
description = "CLI for Doover"
requires-python = ">=3.11"
dependencies = [
    "paramiko>=3.5.1",
    "pydoover",
    "requests>=2.32.3",
    "typer>=0.15.4",
]


[project.scripts]
doover = "doover_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pydoover = { git = "https://github.com/spaneng/pydoover", rev = "9a169a85" }
